--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
     </div>
 
     <div class="text-center mt-5 mb-5">
-      <h2>LE 57</h2>
+      <p>LE 57</p>
       <button type="button" class="btn btn-dark">SHOP THE SELECTION</button>
     </div>
 
     <div class="container pt-5 pb-5">
       <div class="row">
-        <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <div class="col-md-4 col-sm-12 d-flex justify-content-center mb-2">
           <div class="card" style="width: 18rem">
             <img
               src="https://saint-laurent.dam.kering.com/m/67c1fbad3ae117e0/Medium-720117Y143V1000_A.jpg?v=1"
@@ -161,7 +161,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <div class="col-md-4 col-sm-12 d-flex justify-content-center mb-2">
           <div class="card" style="width: 18rem">
             <img
               src="https://saint-laurent.dam.kering.com/m/563688bd02588bbc/Medium-708452FAAH81000_A.jpg?v=2"
@@ -173,7 +173,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+        <div class="col-md-4 col-sm-12 d-flex justify-content-center mb-2">
           <div class="card" style="width: 18rem">
             <img
               src="https://saint-laurent.dam.kering.com/m/5b1466f175c27cae/Medium2-403943BOW011000_A.jpg?v=6"
@@ -223,7 +223,15 @@
             </div>
           </div>
         </div>
-        <div class="f-thirdline pb-5 text-center">Ship to : United States</div>
+        <div class="f-thirdline pb-5 text-center">
+          Ship to :
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Flag_of_the_United_States_%281877%E2%80%931890%29.svg/2560px-Flag_of_the_United_States_%281877%E2%80%931890%29.svg.png"
+            width="16"
+            height="12"
+          />
+          United States
+        </div>
       </div>
     </footer>
     <script
